--- a/data-structures/assignemt/index.html
+++ b/data-structures/assignemt/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href = "style.css" rel="stylesheet"/>
-    <title>String Manipulation</title>
-</head>
-<body>
-    <h1 class="first"> 
-        String Manipulation
-    </h1>
-    <p>
-        This is an example assignemnt in javascript to showcase the use of string manipulation 
-    </p> 
-
-    <form id="yourName">
-        <h5> Enter the String</h5>
-        <textarea id="textIn"></textarea>
-        <button id ="buttonIn">Push Button</button>
-    </form>
-    <script src="/Users/nithinvadekkapat/Work/javascript/data-structures/assignemt/script.js"></script>
-</body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>String Manipulation!</title>
+  </head>
+  <body>
+    <header>
+      <h1>String Manipulation!</h1>
+    </header>
+    <main>
+      <section >
+        <textarea id="text"></textarea>
+        <button id="button">Check!</button>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
