added the assignemnt

--- a/functions/index.html
+++ b/functions/index.html
@@ -11,6 +11,7 @@
     <section></section>
     <button class="buy">Buy a New Plane 🛩️</button>
     <button class ="poll">Answer the Poll ❓</button>
+    <textarea class="output"></textarea>
     <section></section>
     <h1> A Closer Look At The Functions</h1>
     <script src="script.js"></script>
