--- a/functions/index.html
+++ b/functions/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>A Closer Look at Functions</title>
-</head>
-<body>
+  </head>
+  <body>
     <section></section>
     <button class="buy">Buy a New Plane 🛩️</button>
-    <button class ="poll">Answer the Poll ❓</button>
+    <button class="poll">Answer the Poll ❓</button>
     <textarea class="output"></textarea>
     <section></section>
-    <h1> A Closer Look At The Functions</h1>
-    <script src="script.js"></script>
-</body>
+    <h1>A Closer Look At The Functions</h1>
+    <script src="poll.js"></script>
+  </body>
 </html>
